namespace java com.igool.id.service.thrift
service IdGenerateService {
		 	i64 getGenerateIdByName(1:string name)
	}